syntax = "proto3";

package gordon;

option go_package = "github.com/bnema/gordon/internal/grpc";

// CoreService is the main orchestration service provided by gordon-core.
// It handles target resolution, route management, and registry event notifications.
service CoreService {
  // GetTarget resolves a domain to its proxy target (container or external route)
  rpc GetTarget(GetTargetRequest) returns (GetTargetResponse);
  
  // GetRoutes returns all configured routes
  rpc GetRoutes(GetRoutesRequest) returns (GetRoutesResponse);
  
  // GetExternalRoutes returns only external (non-container) routes
  rpc GetExternalRoutes(GetExternalRoutesRequest) returns (GetExternalRoutesResponse);
  
  // NotifyImagePushed is called by the registry when an image is pushed
  rpc NotifyImagePushed(NotifyImagePushedRequest) returns (NotifyImagePushedResponse);
  
  // WatchRouteChanges streams route change events for cache invalidation
  rpc WatchRouteChanges(WatchRouteChangesRequest) returns (stream RouteChangeEvent);
}

// Target represents where to route traffic for a domain
message Target {
  string host = 1;           // IP address or hostname
  int32 port = 2;            // Port number
  string container_id = 3;   // Docker container ID (empty for external routes)
  string scheme = 4;         // http or https
}

// Route represents a configured routing rule
message Route {
  string domain = 1;         // Domain name (e.g., "myapp.example.com")
  string image = 2;          // Docker image reference
  bool https = 3;            // Whether HTTPS is enabled
  bool external = 4;         // Whether this is an external route
  string target_url = 5;     // Target URL for external routes
}

// GetTargetRequest is used to resolve a domain to its target
message GetTargetRequest {
  string domain = 1;
}

message GetTargetResponse {
  Target target = 1;
  bool found = 2;
}

// GetRoutesRequest/Response for retrieving all routes
message GetRoutesRequest {}

message GetRoutesResponse {
  repeated Route routes = 1;
}

// GetExternalRoutesRequest/Response for external routes only
message GetExternalRoutesRequest {}

message GetExternalRoutesResponse {
  // Map of domain -> target URL
  map<string, string> routes = 1;
}

// NotifyImagePushedRequest/Response for registry events
message NotifyImagePushedRequest {
  string name = 1;           // Image name (e.g., "myapp")
  string reference = 2;      // Tag or digest (e.g., "latest")
  bytes manifest = 3;        // Raw manifest JSON
  map<string, string> annotations = 4;  // Manifest annotations
}

message NotifyImagePushedResponse {
  bool accepted = 1;
  string message = 2;
}

// RouteChangeEvent for streaming route changes
message RouteChangeEvent {
  enum ChangeType {
    CHANGE_TYPE_UNSPECIFIED = 0;
    INVALIDATE = 1;          // Specific domain invalidated
    INVALIDATE_ALL = 2;      // All routes invalidated, clear cache
  }
  
  ChangeType type = 1;
  string domain = 2;         // Only set for INVALIDATE type
}

message WatchRouteChangesRequest {}
