syntax = "proto3";

package gordon;

option go_package = "github.com/bnema/gordon/internal/grpc";

// RegistryInspectService provides read-only access to registry data.
// The actual registry HTTP API runs separately on port 5000.
service RegistryInspectService {
  // GetManifest retrieves a manifest by name and reference
  rpc GetManifest(GetManifestRequest) returns (GetManifestResponse);
  
  // ListTags returns all tags for a repository
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
  
  // ListRepositories returns all repository names
  rpc ListRepositories(ListRepositoriesRequest) returns (ListRepositoriesResponse);
}

// Manifest represents a Docker image manifest
message Manifest {
  string media_type = 1;
  int64 size = 2;
  string digest = 3;
  bytes content = 4;         // Raw manifest content
  map<string, string> annotations = 5;
}

// GetManifest retrieves a manifest
message GetManifestRequest {
  string name = 1;           // Repository name
  string reference = 2;      // Tag or digest
}

message GetManifestResponse {
  Manifest manifest = 1;
  bool found = 2;
}

// ListTags returns tags for a repository
message ListTagsRequest {
  string name = 1;           // Repository name
}

message ListTagsResponse {
  string name = 1;           // Repository name
  repeated string tags = 2;
}

// ListRepositories returns all repositories
message ListRepositoriesRequest {}

message ListRepositoriesResponse {
  repeated string repositories = 1;
}
